test/files/pos/t8352/Test_2.scala
object Test extends App {
  def expectUnit(): Unit = {
    Macros.foo(true)
  }
}
