test/files/neg/macro-blackbox-structural/Test_2.scala
import Macros._

object Test extends App {
  println(Macros.foo.x)
}